--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -13,12 +13,12 @@
   "number": "Your Phone Number",
   "delivery": "Delivery Time",
   "my-projects": "My Projects",
-  "my-projects-paragraph": "Recently I have made two small projects.First one is a multiplayer version of a popular game - Rock Paper and Scissors.The second one is my simplified version of YouTube.",
+  "my-projects-paragraph": "Recently I have made two small projects. First one is a multiplayer version of a popular game - Rock Paper and Scissors.The second one is my simplified version of YouTube.",
   "hey": "Hey, I'm Simon",
   "who": "Who am I?",
   "who-p": "I’m a web designer and a programmer with over three years of experience in building websites using modern technologies such as React, Vue and JavaScript.",
   "Technologies": "Technologies",
-  "technologies-p": "I use modern web technologies, which allows me to solve most of the problems encountered during developing your projects.",
+  "technologies-p": "I use modern web technologies, which allows me to solve most of the problems during developing your ideas.",
   "what-build": "What Can I build?",
   "Designing": "Designing",
   "Programming": "Programming"
