--- a/src/assets/locales/pl.json
+++ b/src/assets/locales/pl.json
@@ -1,10 +1,10 @@
 {
   "nav": "O Mnie",
-  "main-header" : "Freelance Web Designer oraz Programista JS",
+  "main-header" : "Freelancer, Web Designer oraz Programista JS",
   "my-intro": "Cześć, nazywam się Szymon Mazurek",
   "introduction": "Cześć, jestem web deweloperem i studentem Informatyki na Uniwersytecie Wrocławskim. Zawsze chciałeś mieć stronę internetową dla siebie albo firmy? Może masz po prostu jakiś projekt w głowie? Nie wahaj się i napisz do mnie! Razem możemy stworzyć Twój projekt i sprawić, że będzie dostępny na całym Świecie.",
-  "Benefits": "Korzyści",
-  "Project": "Masz jakiś projekt w głowie?",
+  "benefits": "Korzyści",
+  "Project": "Masz jakiś pomysł w głowie?",
   "project-intro": "Chcesz by Twoja strona była jak najszybciej dostępna? Masz jakiś projekt w głowie albo potrzebujesz biznesowego rozwiązania IT?",
   "contact": "Skontaktuj się",
   "name": "Twoje Imię",
@@ -13,7 +13,7 @@
   "number": "Twój Numer",
   "delivery": "Dostarczenie",
   "my-projects": "Moje Projekty",
-  "my-projects-paragraph": "Ostatnio zrobiłem dwa małe projekty. Pierwszy to gra multiplayer - kamień,papier, nożyce. Drugi to moja, uproszczona, wersja YouTube.",
+  "my-projects-paragraph": "Ostatnio zrobiłem dwa małe projekty. Pierwszy to gra multiplayer - kamień, papier, nożyce. Drugi to moja, uproszczona, wersja YouTube.",
   "hey": "Cześć, jestem Szymon",
   "who": "Kim jestem?",
   "who-p": "Jestem web designerem, a także programistą z ponad trzy letnim doświadczeniem w budowaniu projektów z użyciem nowych technologii, takich jak React, Vue czy JavaScript.",
